Fix RadioButton on IE

--- a/src/components/RadioButton/RadioButton.css
+++ b/src/components/RadioButton/RadioButton.css
@@ -15,6 +15,10 @@
   display: flex;
   position: relative;
 }
+.radioButton > span:before,
+.radioButton > span:after {
+  display: block;
+}
 .radioButton > span:before {
   border-radius: 50%;
   border: 2px solid var(--darkMetalGrey);
